2011-05-28 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-50
	* add missed files
	* tag V01-05-49
	* add regexp matching as 3rd option in search mode

2011-05-27 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-48
	* protect for null-pointer exception in ParameterTreeModel.java

2011-05-26 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-47
	* Display datasets and unassigned input tags of selected path
	* in right lower panel tabs. (bug/feature 82524).
	
2011-05-11 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-46
	* Fixes a little bug of "import all" option.
	* Includes new diff functionalities to perform comparisons between
	  containers of the same type.
	* Shows only relevant container differences after using Import all.

2011-04-28 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-45
	* Type mismatch error message for Drag&Drop feature. bug #76145.
	* Fixes ClassCastException in Drag&Drop functionality.
	
2011-04-27 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-44
	* fix of object selection by label/name, plugin/type and (now separate) parameter value

2011-04-24 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-43
	* update "replace ModuleInstance", add "replace Sequence|Path"
	
2011-04-21 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-42
	* Add "Import all" feature for PSets, EDSource, ESSources, ESModules and Services.
    * Some "Import all Paths" and "Import all Sequences" fixes.
    * Including progress bar dialog.

2011-04-15  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-41
	* Fix bug re importing OutputModules: they are now automatically
	  imported together with their stream. Further, endpaths containing 
	  output modules can be imported with their outputmodule, but only
	  when the corrsponding stream already exists (or was previously
	  imported)

2011-04-15  Andrea Bocci
	* tag V01-05-40